syntax = "proto3";

import "io/timemates/api/common/types/Status.proto";
import "requests/GetFileBytesRequest.proto";
import "requests/UploadFileRequest.proto";

service FilesService {
  /**
   * Returns a sequence of bytes of the file's content.
   */
  rpc getFileBytes(GetFileBytesRequest) returns (stream GetFileBytesRequest.Response);

  /*
   * Uploads file to server.
   * Returns status after upload file stream ends.
   */
  rpc uploadFile(stream FileChunk) returns (Status);
}